--- a/ExpenseTracker.Web/appsettings.json
+++ b/ExpenseTracker.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ExpenseTracker;Username=postgres;Password=Sm126723S"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ExpenseTracker;Username=postgres;Password=12345678"
   },
   "AllowedHosts": "*",
   "Jwt": {
